# Opencv

src/: CMakeLists.txt  main.cpp
src/include/: .segmentation.hpp.swp  HistoEqual.hpp  convolution.hpp  segmentation.hpp
src/src/: HistoEqual.cpp  convolution.cpp  segmentation.cpp
